--- a/index.html
+++ b/index.html
@@ -7,3 +7,20 @@
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
  </head>
+ <body>
+   <header>
+		<h1>ITMD 362 Lab 2: Basic Form</h1>
+	</header>
+	<section class="form">
+		<fieldset>
+			<form method="POST" autocapitalize="none" actuocomplete="on" action="#null">
+				<legend>Enter Your Information Below</legend>
+				<div>
+					<label for="email">Email: </label>
+					<input type="email" name="email_field" placeholder="myemail@mail.com">
+				</div>
+			</form>
+		</fieldset>
+	</section>
+</body>
+</html>
