First draft of index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
 					<label for="email">Email: </label>
 					<input type="email" name="email_field" placeholder="myemail@mail.com">
 				</div>
+				<div>
+					<label for="phone">Phone Number: </label>
+					<input type="tel" name="phone_field" placeholder="000-000-0000">
+				</div>
+				<div>
+					<label for="birthday">Date Of Birth: </label>
+					<input type="date" name="birth_field">
+				</div>
+				<div class="btn-container">
+					<input id="button" type="submit" value="Submit">
+				</div>
 			</form>
 		</fieldset>
 	</section>
