--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 	</header>
 	<section class="form">
 		<fieldset>
-			<form method="POST" autocapitalize="none" actuocomplete="on" action="#null">
-				<legend>Enter Your Information Below</legend>
+			<legend>Enter Your Information Below</legend>
+			<form method="POST" autocapitalize="none" autoocomplete="on" action="#null">
+				
 				<div>
 					<label for="email">Email: </label>
 					<input type="email" name="email_field" placeholder="myemail@mail.com">
