--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<section class="form">
 		<fieldset>
 			<legend>Enter Your Information Below</legend>
-			<form method="POST" autocapitalize="none" autoocomplete="on" action="#null">
+			<form method="POST" autocapitalize="none" autocomplete="on" action="#null">
 				
 				<div>
 					<label for="email">Email: </label>
