--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 	</header>
 	<section class="form">
 		<fieldset>
-			<legend>Enter Your Information Below</legend>
+			<h2><legend>Enter Your Information Below</legend></h2>
 			<form method="POST" autocapitalize="none" autocomplete="on" action="#null">
 				
 				<div>
-					<label for="email">Email: </label>
+					<label>Email: </label>
 					<input type="email" name="email_field" placeholder="myemail@mail.com">
 				</div>
 				<div>
-					<label for="phone">Phone Number: </label>
+					<label">Phone Number: </label>
 					<input type="tel" name="phone_field" placeholder="000-000-0000">
 				</div>
 				<div>
-					<label for="birthday">Date Of Birth: </label>
+					<label>Date Of Birth: </label>
 					<input type="date" name="birth_field">
 				</div>
 				<div class="btn-container">
