--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</header>
 	<section class="form">
 		<fieldset>
-			<h2><legend>Enter Your Information Below</legend></h2>
+			<legend>Enter Your Information Below</legend>
 			<form method="POST" autocapitalize="none" autocomplete="on" action="#null">
 				
 				<div>
@@ -21,7 +21,7 @@
 					<input type="email" name="email_field" placeholder="myemail@mail.com">
 				</div>
 				<div>
-					<label">Phone Number: </label>
+					<label>Phone Number: </label>
 					<input type="tel" name="phone_field" placeholder="000-000-0000">
 				</div>
 				<div>
